[package]
name = "fs-sparse"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"
license = "AGPL-3.0-or-later WITH GCC-exception-3.0"
description = "Interact with sparse files provided by filesystems"

[dependencies]
snafu = "0.6"
libc = "0.2.77"

[dev-dependencies]
predicates = "1.0.0"
assert_cmd = "0.11.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
pico-args = "0.3.4"
